// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormSection /> should render correctly with nothing passed 1`] = `
.c0 {
  margin: 10px;
  background: #ffffff;
  box-shadow: 0 0 3px #eaeaea;
  padding: 10px;
  min-height: 350px;
  height: calc(100vh -       50px -       10px -       10px);
}

<form
  className="c0"
  noValidate={true}
/>
`;

exports[`<FormSection /> should render correctly with vh and margin passed 1`] = `
.c0 {
  margin: 10px;
  background: #ffffff;
  box-shadow: 0 0 3px #eaeaea;
  padding: 10px;
  min-height: 350px;
  height: calc(33.333333333333336vh -       16.666666666666668px -       5px -       10px);
}

<form
  className="c0"
  noValidate={true}
/>
`;

exports[`<styled.form /> should render correctly 1`] = `
.c0 {
  margin: 10px;
  background: #ffffff;
  box-shadow: 0 0 3px #eaeaea;
  padding: 10px;
  min-height: 350px;
  height: calc(100vh -       50px -       10px -       10px);
}

<form
  className="c0"
  noValidate={true}
/>
`;
